--- a/static/login.html
+++ b/static/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>login page</title>
-    <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-auth.js"></script>
 </head>
 <body>
 <h1>Hello <span id="Username"></span></h1>
